# sql2excel-exporter

./: .gitignore  LICENSE  README.md  app.py  config.json  pyproject.toml
core/: database.py  exporter.py  local_storage.py  models.py
datasource/: datasource.py  datasource_container.py  mysql_datasource.py
ui/: data_source_form.py  main_window.py  script_form.py  styles.py
utils/: xlsxwriter_util.py
